# ChangeLog for perl-core/Test-Harness
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/Test-Harness/ChangeLog,v 1.17 2006/08/04 13:32:49 mcummings Exp $

  04 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Test-Harness-2.30.ebuild, Test-Harness-2.42.ebuild,
  Test-Harness-2.52.ebuild, Test-Harness-2.56.ebuild,
  Test-Harness-2.62.ebuild:
  Adding perl dep

*Test-Harness-2.62 (24 Jun 2006)

  24 Jun 2006; Michael Cummings <mcummings@gentoo.org>
  +Test-Harness-2.62.ebuild:
  Version bump

  18 Jun 2006; Bryan Østergaard <kloeri@gentoo.org>
  Test-Harness-2.56.ebuild:
  Stable on ia64.

  08 Jun 2006; Joshua Kinard <kumba@gentoo.org> Test-Harness-2.56.ebuild:
  Marked stable on mips.

  27 May 2006; Bryan Østergaard <kloeri@gentoo.org>
  Test-Harness-2.56.ebuild:
  Stable on alpha.

  27 May 2006; <mcummings@gentoo.org> Test-Harness-2.56.ebuild:
  marking sparc stable

  26 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  Test-Harness-2.56.ebuild:
  Stable on amd64 and x86 wrt bug #133989.

  26 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  Test-Harness-2.56.ebuild:
  Add ~x86-fbsd keyword.

  26 May 2006; Guy Martin <gmsoft@gentoo.org> Test-Harness-2.56.ebuild:
  Stable on hppa.

  26 May 2006; Markus Rothe <corsair@gentoo.org> Test-Harness-2.56.ebuild:
  Stable on ppc64; bug #133989

  26 May 2006; <nixnut@gentoo.org> Test-Harness-2.56.ebuild:
  Stable on ppc. Bug #133989

  25 Feb 2006; Joshua Kinard <kumba@gentoo.org> Test-Harness-2.56.ebuild:
  Added ~mips to KEYWORDS.

  25 Feb 2006; Joshua Kinard <kumba@gentoo.org> Test-Harness-2.42.ebuild:
  Marked stable on mips.

*Test-Harness-2.56 (11 Nov 2005)

  11 Nov 2005; Michael Cummings <mcummings@gentoo.org>
  +Test-Harness-2.56.ebuild:
  Version bump upstream

*Test-Harness-2.52 (17 Jul 2005)

  17 Jul 2005; Michael Cummings <mcummings@gentoo.org>
  +Test-Harness-2.52.ebuild:
  Upstream bump

*Test-Harness-2.30 (25 May 2005)
