@@ -1,0 +1,20 @@
+# Copyright 1999-2006 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Test-Harness/Test-Harness-2.62.ebuild,v 1.3 2006/10/17 08:41:03 uberlord Exp $
+
+EAPI="prefix"
+
+inherit perl-module
+
+DESCRIPTION="Runs perl standard test scripts with statistics"
+HOMEPAGE="http://search.cpan.org/search?dist=Test-Harness"
+SRC_URI="mirror://cpan/authors/id/P/PE/PETDANCE/${P}.tar.gz"
+
+LICENSE="Artistic"
+SLOT="0"
+KEYWORDS="~amd64 ~ppc-macos ~x86 ~x86-macos"
+IUSE=""
+SRC_TEST="do"
+
+DEPEND="dev-lang/perl"
+mydoc="rfc*.txt"
